Adding cards of cars to home page

--- a/cw2b-project-implementation/CW2B_RP_Audi/CW2b_RP_Audi/CW2b_RP_Audi/Pages/Index.cshtml
+++ b/cw2b-project-implementation/CW2B_RP_Audi/CW2b_RP_Audi/CW2b_RP_Audi/Pages/Index.cshtml
@@ -1,10 +1,81 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Car Models page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Our Range</h1>
+    <p>Find used cars, news, and more here: <a href="https://www.audi.co.uk/uk/web/en.html">https://www.audi.co.uk/uk/web/en.html</a>, on the official Audi website.</p>
+</div>
+
+<div class="container">
+    <div class="row gy-3 my-3">
+        <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Audi RS3 Image">
+                <div class="card-body">
+                    <h5 class="card-title">Audi RS3</h5>
+                    <p class="card-text">Add description</p>
+                    <a href="#" class="btn btn-primary">View Car</a>
+                    <a href="#" class="btn btn-secondary">Buy</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Audi RS4 Image">
+                <div class="card-body">
+                    <h5 class="card-title">Audi RS4</h5>
+                    <p class="card-text">Add description</p>
+                    <a href="#" class="btn btn-primary">View Car</a>
+                    <a href="#" class="btn btn-secondary">Buy</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Audi RS5 Image">
+                <div class="card-body">
+                    <h5 class="card-title">Audi RS5</h5>
+                    <p class="card-text">Add description</p>
+                    <a href="#" class="btn btn-primary">View Car</a>
+                    <a href="#" class="btn btn-secondary">Buy</a>
+                </div>
+            </div>
+        </div>
+            <div class="col-sm-4">
+                <div class="card">
+                <img class="card-img-top" src="..." alt="Audi RS6 Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Audi RS6</h5>
+                        <p class="card-text">Add description</p>
+                        <a href="#" class="btn btn-primary">View Car</a>
+                        <a href="#" class="btn btn-secondary">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Audi RS7 Image">
+                <div class="card-body">
+                    <h5 class="card-title">Audi RS7</h5>
+                    <p class="card-text">Add description</p>
+                    <a href="#" class="btn btn-primary">View Car</a>
+                    <a href="#" class="btn btn-secondary">Buy</a>
+                </div>
+            </div>
+        </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Audi R8 Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Audi R8</h5>
+                        <p class="card-text">Add description</p>
+                        <a href="#" class="btn btn-primary">View Car</a>
+                        <a href="#" class="btn btn-secondary">Buy</a>
+                    </div>
+                </div>
+            </div>
+    </div>
 </div>
