--- a/cw2b-project-implementation/CW2B_RP_Audi_Team_4/CW2B_RP_Audi_Team_4/Pages/Shared/_Layout.cshtml
+++ b/cw2b-project-implementation/CW2B_RP_Audi_Team_4/CW2B_RP_Audi_Team_4/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Cars/Index">Cars</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Checkout">Checkout</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/OrderItems/Index">OrderItems</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
