--- a/CW2B_RP_Audi_Team_4/Pages/Shared/_Layout.cshtml
+++ b/CW2B_RP_Audi_Team_4/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CarImages/Index">CarImages</a>
-                        </li>                      
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Wishlists/Index">Wishlists</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
