--- a/CW2B_RP_Audi_Team_4/Pages/Shared/_Layout.cshtml
+++ b/CW2B_RP_Audi_Team_4/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Cars/Index">Cars</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Index">Customers</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Orders/Index">Orders</a>
                         </li>
                         <li class="nav-item">
